test windows shell

--- a/.github/workflows/actionFlow.yml
+++ b/.github/workflows/actionFlow.yml
@@ -18,3 +18,10 @@ jobs:
           print
           (platform.processor())
         shell: python
+  run-windows-commands:
+    runs-on: windows-latest
+    steps:
+      - name: Directory PowerShell
+        run: Get-Location
+      - name: Direcotry Bash
+        run: pwd
