--- a/.github/workflows/actionFlow.yml
+++ b/.github/workflows/actionFlow.yml
@@ -17,7 +17,7 @@ jobs:
           import platform
           print
           (platform.processor())
-    
+
   run-windows-commands:
     runs-on: windows-latest
     steps:
@@ -25,4 +25,4 @@ jobs:
         run: Get-Location
       - name: Direcotry Bash
         run: pwd
-        shel: bash
+        shell: bash
