test windows shell

--- a/.github/workflows/actionFlow.yml
+++ b/.github/workflows/actionFlow.yml
@@ -17,7 +17,8 @@ jobs:
           import platform
           print
           (platform.processor())
-
+        shell: python
+        
   run-windows-commands:
     runs-on: windows-latest
     steps:
