--- a/.github/workflows/actionFlow.yml
+++ b/.github/workflows/actionFlow.yml
@@ -17,10 +17,12 @@ jobs:
           import platform
           print
           (platform.processor())
-        shell: python
-        
+        shell: python   //set the specific shell to use
+
   run-windows-commands:
     runs-on: windows-latest
+    //usually, the jobs are run parallelly, the jobs' run can be ordered by adding dependences
+    needs: ["run-shell-command"]
     steps:
       - name: Directory PowerShell
         run: Get-Location
