--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,9 +2,9 @@ name: Simple Action
 #on: [push]
 on:
   #push:
-  schedule:
-    - cron: "0/5 * * * *"
-    - cron: "0/6 * * * *"
+  #schedule:
+  #  - cron: "0/5 * * * *"
+  #  - cron: "0/6 * * * *"
   pull_request:
     types: [opened,closed,assigned,reopened]
 
