--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -1,8 +1,8 @@
 name: branch test
 on:
-  push:
+  pull_request:
     branches:
-      - firsttest
+      - master
       - "feature/*" #matches feature/featA,feature/featB,not match feature/feat/a
       - "feature/**" #matches all feature/*/*...
 jobs:
