--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -17,7 +17,7 @@ jobs:
           echo "STEP_ENV: ${STEP_ENV}"
       - name: log ENV 2
           env:
-            STEP_ENV: Available to only this step
+            STEP_ENV2: Available to only this step
           run: |
             echo "WF_ENV: ${WF_ENV}"
             echo "JOB_ENV: ${JOB_ENV}"
