add function testing

--- a/.github/workflows/functions.yml
+++ b/.github/workflows/functions.yml
@@ -5,12 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: string function test
-      - run: |
+        run: |
          echo ${{ contains('Hello World', 'He' }}
          echo startsWith('Hello world', 'He')
          echo endWith('Hello world", 'ld')
       - name: if testing
         if: success()
-      - run: |
+        run: |
           echo ormat('Hello {0} {1} {2}', 'Mona', 'the', 'Octocat')
           echo toJSON(job)
