--- a/.github/workflows/functions.yml
+++ b/.github/workflows/functions.yml
@@ -7,10 +7,10 @@ jobs:
       - name: string function test
         run: |
          echo ${{ contains('Hello World', 'He' }}
-         echo startsWith('Hello world', 'He')
-         echo endWith('Hello world", 'ld')
+         echo ${{ startsWith('Hello world', 'He') }}
+         echo ${{ endWith('Hello world", 'ld') }}
       - name: if testing
         if: success()
         run: |
-          echo ormat('Hello {0} {1} {2}', 'Mona', 'the', 'Octocat')
-          echo toJSON(job)
+          echo ${{ ormat('Hello {0} {1} {2}', 'Mona', 'the', 'Octocat') }}
+          echo ${{ toJSON(job) }}
