add function testing

--- a/.github/workflows/functions.yml
+++ b/.github/workflows/functions.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - name: string function test
         run: |
-         echo ${{ contains('Hello World', 'He' }}
+         echo ${{ contains('Hello World', 'He') }}
          echo ${{ startsWith('Hello world', 'He') }}
          echo ${{ endWith('Hello world", 'ld') }}
       - name: if testing
