--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -3,13 +3,17 @@ on: push
 
 jobs:
   node-version:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [macos-latest,ubuntu-latest,windows-latest]
+        node_version: [6,8,10]
+    runs-on: ${{matrix.os}}
     steps:
       - name: Log node version
         run: node -v
       - name: change node version
         uses: actions/setup-node@v1
         with:
-          node-version: 6
+          node-version: ${{ matrix.node_version}}
       - name: Log node version
         run: node -v
