--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,10 +7,23 @@ jobs:
       matrix:
         os: [macos-latest,ubuntu-latest,windows-latest]
         node_version: [6,8,10]
+        include:
+          - os: ubuntu-latest
+            node_version: 8
+            is_ubuntu_8: "true"
+        exclude:
+          - os: ubuntu-latest
+            node_version: 6
+          - os: macos-latest
+            node_version: 8
     runs-on: ${{matrix.os}}
+    env:
+      is_ubuntu_8: ${{ matrix.is_ubuntu_8}}
     steps:
       - name: Log node version
-        run: node -v
+        run: |
+          node -v
+          echo $is_ubuntu_8
       - name: change node version
         uses: actions/setup-node@v1
         with:
